[gd_scene load_steps=19 format=2]

[ext_resource path="res://ui/hud/hud.gd" type="Script" id=1]
[ext_resource path="res://ui/hud/crosshair.gd" type="Script" id=2]
[ext_resource path="res://default_texture.png" type="Texture" id=3]
[ext_resource path="res://ui/hud/gunplaceholder.png" type="Texture" id=4]
[ext_resource path="res://ui/hud/CustomScroll.gd" type="Script" id=5]
[ext_resource path="res://ui/hud/OldLondon.ttf" type="DynamicFontData" id=6]

[sub_resource type="VisualShaderNodeTexture" id=3]
source = 1

[sub_resource type="VisualShaderNodeVec3Constant" id=4]
constant = Vector3( 1, 1, 1 )

[sub_resource type="VisualShaderNodeVectorOp" id=5]
operator = 2

[sub_resource type="VisualShaderNodeInput" id=8]
input_name = "screen_uv"

[sub_resource type="VisualShaderNodeVectorOp" id=9]
operator = 2

[sub_resource type="VisualShaderNodeVectorOp" id=10]
operator = 1

[sub_resource type="VisualShaderNodeScalarUniform" id=11]
uniform_name = "ScalarUniform"

[sub_resource type="VisualShader" id=6]
code = "shader_type canvas_item;
uniform float ScalarUniform;



void vertex() {
// Output:0

}

void fragment() {
// Vector:3
	vec3 n_out3p0 = vec3(1.000000, 1.000000, 1.000000);

// ScalarUniform:8
	float n_out8p0 = ScalarUniform;

// VectorOp:4
	vec3 n_out4p0 = n_out3p0 * vec3(n_out8p0);

// Input:5
	vec3 n_out5p0 = vec3(SCREEN_UV, 0.0);

// Texture:2
	vec3 n_out2p0;
	float n_out2p1;
	{
		vec4 _tex_read = textureLod(SCREEN_TEXTURE, n_out5p0.xy, 0.0);
		n_out2p0 = _tex_read.rgb;
		n_out2p1 = _tex_read.a;
	}

// VectorOp:6
	vec3 n_out6p0 = n_out2p0 * vec3(n_out8p0);

// VectorOp:7
	vec3 n_out7p0 = n_out4p0 - n_out6p0;

// Output:0
	COLOR.rgb = n_out7p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -349, 227 )
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 620, 240 )
nodes/fragment/2/node = SubResource( 3 )
nodes/fragment/2/position = Vector2( -40, 340 )
nodes/fragment/3/node = SubResource( 4 )
nodes/fragment/3/position = Vector2( -140, 220 )
nodes/fragment/4/node = SubResource( 5 )
nodes/fragment/4/position = Vector2( 220, 220 )
nodes/fragment/5/node = SubResource( 8 )
nodes/fragment/5/position = Vector2( -280, 340 )
nodes/fragment/6/node = SubResource( 9 )
nodes/fragment/6/position = Vector2( 200, 340 )
nodes/fragment/7/node = SubResource( 10 )
nodes/fragment/7/position = Vector2( 400, 280 )
nodes/fragment/8/node = SubResource( 11 )
nodes/fragment/8/position = Vector2( -60, 500 )
nodes/fragment/connections = PoolIntArray( 3, 0, 4, 0, 5, 0, 2, 0, 2, 0, 6, 0, 8, 0, 4, 1, 8, 0, 6, 1, 4, 0, 7, 0, 6, 0, 7, 1, 7, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/ScalarUniform = 0.5

[sub_resource type="DynamicFont" id=14]
size = 64
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.498039, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0.498039, 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect" type="ColorRect" parent="."]
visible = false
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Popup" type="Popup" parent="."]
visible = true
anchor_right = 1.0
margin_bottom = 184.0

[node name="VBoxContainer" type="VBoxContainer" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 94.0
custom_constants/separation = 0

[node name="ColorRect" type="TextureRect" parent="Popup/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 256.0
size_flags_vertical = 3
texture = ExtResource( 3 )
stretch_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Popup/VBoxContainer/ColorRect"]
margin_top = 4.0
margin_right = 1920.0
margin_bottom = 156.0
size_flags_vertical = 3
text = "==========================================
debug menu of whatever this stupid fucking game is
==========================================
"

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/VBoxContainer"]
margin_top = 256.0
margin_right = 1920.0
margin_bottom = 280.0

[node name="LineEdit" type="LineEdit" parent="Popup/VBoxContainer/HBoxContainer"]
margin_right = 1920.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="DebugInfo" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="FPS" type="Label" parent="DebugInfo"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
text = "fps : "

[node name="Pos" type="Label" parent="DebugInfo"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
text = "fps : "

[node name="Vel" type="Label" parent="DebugInfo"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
text = "fps : "

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Crosshair" type="TextureRect" parent="CenterContainer"]
margin_left = 960.0
margin_top = 540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -268.0
margin_top = -227.5
margin_bottom = 227.5

[node name="CustomScroll" type="Container" parent="VBoxContainer"]
margin_right = 268.0
script = ExtResource( 5 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 268.0
margin_bottom = 411.0
focus_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 256.0
margin_bottom = 788.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 128.0
texture = ExtResource( 4 )

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 256.0
margin_bottom = 260.0
texture = ExtResource( 4 )

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 256.0
margin_bottom = 392.0
texture = ExtResource( 4 )

[node name="TextureRect4" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 396.0
margin_right = 256.0
margin_bottom = 524.0
texture = ExtResource( 4 )

[node name="TextureRect5" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 528.0
margin_right = 256.0
margin_bottom = 656.0
texture = ExtResource( 4 )

[node name="TextureRect6" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 660.0
margin_right = 256.0
margin_bottom = 788.0
texture = ExtResource( 4 )

[node name="Ammo" type="Label" parent="VBoxContainer"]
margin_top = 415.0
margin_right = 268.0
margin_bottom = 455.0
custom_fonts/font = SubResource( 14 )
text = "AMMO"
align = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -158.0
margin_right = 698.0

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer2"]
margin_right = 698.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 12 )

[node name="BatBar" type="ProgressBar" parent="VBoxContainer2"]
margin_top = 81.0
margin_right = 698.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 13 )

[connection signal="text_entered" from="Popup/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
